// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptimizedFlatList Snapshots should match snapshot for empty list 1`] = `
<RCTView
  onRefresh={[Function]}
  onScroll={[Function]}
  ref={null}
  refresh={[Function]}
  testID="moments-list"
>
  <RCTView
    ref={null}
    testID="list-view"
  />
</RCTView>
`;

exports[`OptimizedFlatList Snapshots should match snapshot for list with items 1`] = `
<RCTView
  onRefresh={[Function]}
  onScroll={[Function]}
  ref={null}
  refresh={[Function]}
  testID="moments-list"
>
  <RCTView
    ref={null}
    testID="list-view"
  >
    <RCTView
      ref={null}
      testID="list-item-item-0"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 0
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 0
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-1"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 1
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 1
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-2"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 2
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 2
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-3"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 3
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 3
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-4"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 4
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 4
      </RCTText>
    </RCTView>
  </RCTView>
</RCTView>
`;

exports[`OptimizedFlatList Snapshots should match snapshot for loading state 1`] = `
<RCTView
  onRefresh={[Function]}
  onScroll={[Function]}
  ref={null}
  refresh={[Function]}
  testID="moments-list"
>
  <RCTView
    ref={null}
    testID="list-view"
  >
    <RCTView
      ref={null}
      testID="list-item-item-0"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 0
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 0
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-1"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 1
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 1
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-2"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 2
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 2
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-3"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 3
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 3
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-4"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 4
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 4
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-5"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 5
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 5
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-6"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 6
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 6
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-7"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 7
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 7
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-8"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 8
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 8
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      testID="list-item-item-9"
    >
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Item 9
      </RCTText>
      <RCTText
        ref={null}
        testID="RCTText"
      >
        Description for item 9
      </RCTText>
    </RCTView>
  </RCTView>
</RCTView>
`;
